# experimental-fall-detector-android-app

./: .gitignore  build.gradle
fall-detector/: CMakeLists.txt  build.gradle
fall-detector/src/main/java/altermarkive/guardian/: Guardian.java
gradle/wrapper/: gradle-wrapper.properties
